tests/NormalTests/paczka1/fuzzy1/41603405.err
Error in line 5: nIvE7djr2J A921 10,5
Error in line 9: A144 A921 87,9
Error in line 13: 5qkQM A921 -1,5
Error in line 1: 5qkQM A921 47,4
Error in line 7: nIvE7djr2J A268 40,9
Error in line 19: nIvE7djr2J A144 0,0
Error in line 35: KHTLJ1 A144 34,8
